fix(ci): install package in editable mode before running tests

--- a/exchange-ews-readonly/pyproject.toml
+++ b/exchange-ews-readonly/pyproject.toml
@@ -24,3 +24,6 @@ package-dir = {"" = "."}
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["exchange_ews_readonly*"]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
