Increase skill production readiness

--- a/exchange-ews-readonly/.env.example
+++ b/exchange-ews-readonly/.env.example
@@ -7,8 +7,18 @@ EXCHANGE_EWS_EMAIL=user@example.local
 # Optional: DOMAIN\\user for NTLM. If empty, EXCHANGE_EWS_EMAIL is used.
 EXCHANGE_EWS_USERNAME=EXAMPLE\\user
 
-# Required: mailbox password
-EXCHANGE_EWS_PASSWORD=change-me
+# Required (encrypted mode): Fernet key + encrypted mailbox password
+# Generate with Python:
+#   from cryptography.fernet import Fernet
+#   key = Fernet.generate_key()
+#   enc = Fernet(key).encrypt(b"your-mail-password")
+#   print(key.decode()); print(enc.decode())
+EXCHANGE_EWS_CRYPTO_KEY=
+EXCHANGE_EWS_PASSWORD_ENC=
+
+# Optional migration fallback (not recommended):
+# EXCHANGE_EWS_ALLOW_PLAINTEXT_PASSWORD=true
+# EXCHANGE_EWS_PASSWORD=change-me
 
 # Optional: NTLM (default) or BASIC
 EXCHANGE_EWS_AUTH_TYPE=NTLM
